--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8085
-spring.datasource.url=jdbc:mysql://database-1.cldwssofwzpi.eu-west-3.rds.amazonaws.com:3306/mathilda_db?createDatabaseIfNotExist=true&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=rootroot
+spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:database-1.cldwssofwzpi.eu-west-3.rds.amazonaws.com}:${RDS_PORT:3306}/${RDS_DB_NAME:mathilda_db}?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.username=${RDS_USERNAME:admin}
+spring.datasource.password=${RDS_PASSWORD:rootroot}
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.hbm2ddl.import_files=import.sql
 logging.level.org.hibernate=INFO
@@ -12,4 +12,3 @@ logging.level.org.hibernate.stat=DEBUG
 ##logging.level.org.hibernate=ERROR   une fois en prod mettre cette syntaxe pour epurer les logs
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-
